# Website-renovation

./: .firebaserc  .gitignore  CAD_ENGINE_AUDIT.md  ENV_SETUP.md  FRONTEND_AUDIT_REPORT.md  LOST_LINKS_AUDIT.md  README.md  SECURITY.md  SECURITY_RULES_DEPLOY.md  count_logs.py  firestore.rules  fix-firebase-key.js  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  raccolta_file.md  storage.rules  test-burst.ts  test-debug.ts  test-fast.ts  test-imagen-3-deep.ts  test-imagen-availability.ts  test-rate-limit.ts  trigger-config.yaml  tsconfig.json  verify_changes.py
app/: page.tsx  (+2 more)
backend_python/: .gcloudignore  Dockerfile  check_genai.py  check_imports.py  correct_alpha_fade.py  debug_dump_sessions.py  debug_projects.py  debug_prompt.txt  debug_quote_to_render.py  debugging.md  diecut_crop.py  fade_shadow.py  flood_remove.py  magic_wand_remove.py  main.py  process_bg.py  process_white_bg.py  punch_holes.py  pyproject.toml  remove_bg.py  saturation_key.py  targeted_hole_punch.py  test_ambiguity.py  test_server.py  test_startup.sh
backend_python/scripts/: cleanup_orphaned_files.py  cleanup_orphaned_firestore_files.py  cleanup_orphaned_storage.py  cleanup_zombie_projects.py  test_deep_delete.py  verify_gemini.py
backend_python/src/agents/: sop_manager.py
backend_python/tests/: test_imagen_isolation.py  verify_e2e_flow.py  verify_firebase.py  verify_integration.py  verify_intelligence.py  verify_orchestrator.py  verify_passkey.py  verify_phase1.py  verify_phase2.py  verify_prompt.py  verify_protocol.py  verify_reliability.py  verify_repo.py
(+413 files in other folders)
